--- a/css/styles.css
+++ b/css/styles.css
@@ -8,6 +8,11 @@ body {
   font-family: Arial, Helvetica, sans-serif;
 }
 
+.container-p {
+  max-width: 1366px;
+  margin:  0 auto;
+}
+
 header .navbar {
 
   outline:  1px solid red;
@@ -17,6 +22,7 @@ header .navbar {
 }
 
 
+
 /* .navbar-nav .nav-item {
   display: inline-block;
 }
@@ -24,3 +30,57 @@ header .navbar {
 .navbar-toggler {
   display: none;
 } */
+
+.hero-container {
+  align-items: center;
+}
+
+.hero {
+  width: 100%;
+  height: 800px;
+}
+
+.hero-image img {
+  width: 100%;
+}
+
+.hero-waves {
+  background-color:#69D4F3;
+  /* width: 100%; */
+  position: absolute;
+  top: 0;
+  right: 0;
+  left: 0;
+  bottom: auto;
+  height: 62%;
+  z-index: -1;
+}
+
+/* .waves-bottom{
+  position: absolute;
+  left: 0;
+  right: 0;
+  top: auto;
+  bottom: -1px;
+  z-index: 1;
+  width: 100%;
+  height: 4vw;
+}  */
+
+.hero-wave-container{
+  background-image: url('../images/hero-waves.svg');
+  background-position: top center;
+  background-repeat: no-repeat;
+  background-size: 100%;
+  max-width: 100%;
+  /* vertical-align: top;
+   display: inline-block;  */
+  position: absolute;
+  left: 0;
+  right: 0;
+  top: auto;
+  bottom: -214px;
+  z-index: 1;
+  width: 100%;
+  height: 215px;
+}
