--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,13 @@
+
+
+:root {
+  --purple-color: #6352FF;
+  --white-color: #ffffff;
+  --buttom-color:#9084FF;
+  --text-color: rgb(109, 109, 109);
+}
+
+
 * {
   margin: 0;
   padding: 0;
@@ -7,6 +17,16 @@
 body {
   font-family: Arial, Helvetica, sans-serif;
 }
+
+h1, h2 {
+  color: var(--purple-color);
+  font-family: 'gilroyextrabold';
+  
+  font-weight: 300;
+   
+}
+
+
 
 .container-p {
   max-width: 1366px;
@@ -40,8 +60,19 @@ header .navbar {
   height: 800px;
 }
 
+.hero-presentation {
+  /* padding-right: 1em; */
+}
+
+.hero-image {
+  position: relative;
+}
+
 .hero-image img {
   width: 100%;
+  position: inherit;
+  bottom: -40px;
+  right: -64px;
 }
 
 .hero-waves {
@@ -52,7 +83,7 @@ header .navbar {
   right: 0;
   left: 0;
   bottom: auto;
-  height: 62%;
+  height: 72%;
   z-index: -1;
 }
 
@@ -83,4 +114,56 @@ header .navbar {
   z-index: 1;
   width: 100%;
   height: 215px;
+}
+
+.hero-presentation p {
+  font-size: 32px;
+  color: var(--white-color);
+}
+
+.hero-presentation h1 {
+  font-size: 54px;
+  margin-top: 0;
+}
+
+.hero-presentation button {
+  padding: 16px 40px;
+  border-radius: 50px;
+  border: none;
+  color: var(--white-color);
+  font-weight: 700;
+  font-size: 21px;
+  background-color: var(--buttom-color);
+  margin-top: 36px;
+}
+
+
+.profesional-container {
+  align-items: center;
+  justify-content: space-between;
+}
+
+.profesional-image img {
+  max-width: 100%;
+  margin-right: 2em;
+}
+.profesional-image {
+  margin-right: 2em;
+}
+
+.profesional-description {
+  width: 46%;
+}
+
+.profesional-description h2 {
+  font-size: 48px;
+  margin-bottom: .5em;
+
+}
+
+.profesional-description p {
+  font-size: 18px;
+  color: var(--text-color);
+  line-height: 32px;
+  fon
 }
