--- a/css/styles.css
+++ b/css/styles.css
@@ -18,7 +18,7 @@ body {
   font-family: Arial, Helvetica, sans-serif;
 }
 
-h1, h2, h4, h5 {
+h1, h2, h3, h4, h5 {
   color: var(--purple-color);
   font-family: 'gilroyextrabold';
   
@@ -33,23 +33,31 @@ h1, h2, h4, h5 {
   margin:  0 auto;
 }
 
+
+
 header .navbar {
 
-  outline:  1px solid red;
+  background-color: var(--white-color);
+  border-radius: 6px;
   max-width: 1366px;
   margin:  0 auto;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  height: 80px;
+  padding: 0 1em;
  
 }
 
 
 
-/* .navbar-nav .nav-item {
+.navbar-nav .nav-item {
   display: inline-block;
 }
 
 .navbar-toggler {
   display: none;
-} */
+}
 
 .hero-container {
   align-items: center;
@@ -190,6 +198,7 @@ header .navbar {
 
 .benefits-container {
   align-items: baseline;
+  padding-left: 7.5em;
 }
 
 .benefits-background {
@@ -352,7 +361,7 @@ header .navbar {
   max-width: 1366px;
   margin: 0 auto;
   display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(444px, 4fr));
+  grid-template-columns: repeat(auto-fill, minmax(350px, 4fr));
   justify-items: center;
   gap: 1em;
   position: relative;
@@ -378,7 +387,143 @@ header .navbar {
 }
 
 .service-item h5{
-  font-size: 16px;
+  font-size: 24px;
+}
+
+.consulting-service {
+  margin-top: 20em;
+  max-width: 960px;
+  align-items: center;
+}
+.consulting-service h2 {
+  font-size: 48px;
+
+}
+
+.consulting-service p {
+  font-size: 20px;
+  color: var(--text-color);
+  line-height: 32px;
+}
+
+.plans-options-container {
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+}
+
+.plan-domiciliary {
+  background: url('../images/plan-shape.svg');
+  width: 424px;
+  height: 610px;
+  background-position: center;
+  background-size: 100% 100%;
+  background-repeat: no-repeat;
+  filter: drop-shadow(0 8px 60px rgba(103, 151, 255, .11));
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-evenly;
+  padding: 3em;
+  
+  
+}
+.plans-options{
+  margin-top: 10em;
+
+
+}
+.plans-options h2 {
+  font-size: 48px;
+  text-align: center;
+  margin-bottom: 2em;
+}
+
+.plan-domiciliary img {
+  width: 70%;
+  margin: 1em 0 2em;
+
+}
+
+.plan-domiciliary h3 {
+  font-size: 24px;
+}
+
+.plan-domiciliary ul {
+  list-style: none;
+  text-align: center;
+  color: var(--text-color);
+}
+
+.plan-domiciliary ul li {
+  margin-bottom: 1em;
+}
+
+.plan-domiciliary ul li:nth-of-type(4) {
+  margin-bottom: .5em;
+}
+
+.plan-domiciliary button {
+  padding: 16px 40px;
+  border-radius: 50px;
+  border: none;
+  color: var(--white-color);
+  font-weight: 700;
+  font-size: 21px;
+  background-color: var(--buttom-color);
+  margin-top: 1em
+}
+
+footer {
+  width: 100%;
+  height: 190px;
+  background-color: var(--purple-color);
+  position: relative;
+  margin-top: 16em;
+}
+
+.footer-container {
+  justify-content: space-between;
+}
+
+
+.wave-footer {
+  position: absolute;
+  width: 100%;
+  height: min-content;
+  bottom: calc(100% - 2px);
+}
+
+footer .logo-neruonline-white img {
+  width: 180px;
+  margin-bottom: 1em;
+  
+}
+
+.logo-social-link ul li {
+  display: inline-block;
+  margin-right: 1em;
+}
+
+.logo-social-link ul a {
+  width: 25px;
+  height: 25px;
+  
+}
+
+.contact-dates h3 {
+  color:var(--white-color);
+
+}
+
+.contact-dates ul li a {
+  text-decoration: none;
+  color: var(--white-color);
+}
+
+.contact-dates ul  {
+  list-style: none;
+  text-align: right;
 }
 
 
