--- a/css/styles.css
+++ b/css/styles.css
@@ -7,6 +7,10 @@
   --text-color: rgb(109, 109, 109);
 }
 
+::selection {
+  background-color: #fff8c7;
+}
+
 
 * {
   margin: 0;
@@ -49,6 +53,14 @@ header .navbar {
  
 }
 
+header {
+  margin-top: 1em;
+}
+
+#main_nav{
+  display: initial;
+}
+
 
 
 .navbar-nav .nav-item {
@@ -57,6 +69,37 @@ header .navbar {
 
 .navbar-toggler {
   display: none;
+}
+
+.navbar-toggler {
+  border: none;
+  background: none;
+  cursor: pointer;
+}
+
+.navbar-toggler-icon {
+  display: inline-block;
+  width: 25px;
+  height: 25px;
+  background-image: url('../images/icon-menu.svg');
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+
+}
+.navbar-nav li {
+  margin-left: 1em;
+}
+.navbar-nav li:nth-of-type(3) a {
+  color: var(--white-color);
+  background-color: var(--buttom-color);
+  padding: 1em 2em;
+  border-radius: 25px;
+}
+
+.navbar-nav li a {
+  text-decoration: none;
+  color: var(--text-color);
 }
 
 .hero-container {
@@ -412,7 +455,7 @@ header .navbar {
   flex-wrap: wrap;
 }
 
-.plan-domiciliary {
+.plan-item {
   background: url('../images/plan-shape.svg');
   width: 424px;
   height: 610px;
@@ -439,31 +482,31 @@ header .navbar {
   margin-bottom: 2em;
 }
 
-.plan-domiciliary img {
+.plan-item img {
   width: 70%;
   margin: 1em 0 2em;
 
 }
 
-.plan-domiciliary h3 {
+.plan-item h3 {
   font-size: 24px;
 }
 
-.plan-domiciliary ul {
+.plan-item ul {
   list-style: none;
   text-align: center;
   color: var(--text-color);
 }
 
-.plan-domiciliary ul li {
+.plan-item ul li {
   margin-bottom: 1em;
 }
 
-.plan-domiciliary ul li:nth-of-type(4) {
+.plan-item ul li:nth-of-type(4) {
   margin-bottom: .5em;
 }
 
-.plan-domiciliary button {
+.plan-item button {
   padding: 16px 40px;
   border-radius: 50px;
   border: none;
@@ -472,6 +515,10 @@ header .navbar {
   font-size: 21px;
   background-color: var(--buttom-color);
   margin-top: 1em
+}
+
+.plan-domiciliary {
+  margin-right: 6em;
 }
 
 footer {
