--- a/css/styles.css
+++ b/css/styles.css
@@ -114,9 +114,7 @@ header {
   overflow-x: hidden;
 }
 
-.hero-presentation {
-  /* padding-right: 1em; */
-}
+
 
 .hero-image {
   position: relative;
@@ -362,7 +360,7 @@ header {
 
 .therapy-services {
   width: 100%;
-  /* height: 300px; */
+  /* height: 432px; */
   position: relative;
   
 }
@@ -381,20 +379,30 @@ header {
 }
 
 .wave-service-top {
-  position: absolute;
   width: 100%;
-  height: min-content;
-  bottom: calc(100% - 2px);
+  height: 150px;
+  background-image: url('../images/wave-service-top.svg');
+  /* position: absolute; */
+  background-position: top center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  /* bottom: calc(100% - 2px); */
 }
 .wave-service-bottom {
-  position: absolute;
+  /* position: absolute; */
   width: 100%;
-  height: min-content;
+  height: 142px;
+  background-image: url('../images/wave-services-bottom.svg');
+  background-position: top center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  
   /* bottom: -100px; */
 }
 
 .therapy-services-content {
   width: 100%;
+  height: 432px;
   background-color: #fedaeb;
  
 
@@ -409,7 +417,7 @@ header {
   gap: 1em;
   position: relative;
   z-index: 1;
-  bottom: -168px;
+  bottom: -36px;
 }
 
 .service-item  {
@@ -523,25 +531,33 @@ header {
 
 footer {
   width: 100%;
-  height: 190px;
-  background-color: var(--purple-color);
   position: relative;
   margin-top: 16em;
 }
 
-.footer-container {
+.footer-content {
+  width: 100%;
+  height: 190px;
+  background-color: var(--purple-color);
+}
+.footer-container{
+
   justify-content: space-between;
 }
 
-
 .wave-footer {
-  position: absolute;
+  /* position: absolute; */
   width: 100%;
-  height: min-content;
-  bottom: calc(100% - 2px);
+  height: 160px;
+  /* height: min-content; */
+  /* bottom: calc(100% - 2px); */
+  background-image: url('../images/wave-footer.svg');
+  background-position: top center;
+  background-size: cover;
+  background-repeat: no-repeat;
 }
 
-footer .logo-neruonline-white img {
+.footer-container .logo-neruonline-white img {
   width: 180px;
   margin-bottom: 1em;
   
@@ -572,6 +588,28 @@ footer .logo-neruonline-white img {
   list-style: none;
   text-align: right;
 }
+
+
+/*///////// media queries//////// */
+
+/* 1023 - 767 */
+
+/* 480 - 320 */
+
+@media screen and (max-width: 1023px){
+  
+}
+@media screen and (max-width: 767px){
+
+}
+@media screen and (max-width: 480px){
+
+}
+@media screen and (max-width: 320px){
+
+}
+
+
 
 
 
