--- a/css/styles.css
+++ b/css/styles.css
@@ -252,7 +252,7 @@ header {
 .wave-benefits-top  {
   width: 100%;
   height: 200px;
-  background-image: url('/images/wave-benefits-1.svg');
+  background-image: url('../images/wave-benefits-1.svg');
   background-position: top center;
   background-size: cover;
   background-repeat: no-repeat;
@@ -262,7 +262,7 @@ header {
 .wave-benefits-bottom {
   max-width: 100%;
   height: 542px;
-  background-image: url('/images/wave-benefits-2.svg');
+  background-image: url('../images/wave-benefits-2.svg');
   background-position: top center;
   background-size: cover;
   background-repeat: no-repeat;
@@ -824,6 +824,10 @@ footer {
     transition: .3s;
   }
 
+  .navbar-nav li {
+    margin-left: 0;
+  }
+
   .navbar-nav.is-active{
     opacity: 1;
     transform: translateY(0);
@@ -979,11 +983,9 @@ footer {
   text-align: center; 
   }
 }
-@media screen and (max-width: 320px) {  
+@media screen and (max-width: 320px) {
 
     .grid-services {
       padding: 0;
   } 
-}
-
-}
+}}}
